<resources>
    <string name="app_name">BeActive</string>
    <string name="logo_Text">Be Active</string>

    <!--    Register a login -->
    <string name="registerButton">Zaregistrovať</string>
    <string name="loginButton">Prihlásiť sa</string>
    <string name="editTextEmail">E-mail</string>
    <string name="editTextPassword">Heslo</string>
    <string name="editTextPasswordOpakovane">Zopakovať heslo</string>
    <string name="editTextName">Meno</string>
    <string name="editTextSurname">Priezvisko</string>
    <string name="textViewRegistrovanie"><u>Nemáte účet ?</u></string>
    <string name="textViewVytvoritUcet">Vytvoriť účet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    DialogText-->
    <string name="wantCloseActivityCounter">Chcete ukončiť meranie activity?</string>
    <string name="answearYes">Áno</string>
    <string name="answearNo">Nie</string>

    <string name="open">open</string>
    <string name="close">close</string>

    <string name="time_picker_text">Dĺžka aktivity</string>
    <string name="time_picker_button_dalej">Pokračovať</string>

    <!--  Fragment profile  -->
    <string name="profile_weight_text">Váha</string>
    <string name="profile_weight_jednotky">kg</string>
    <string name="profile_height_text">Výška</string>
    <string name="profile_height_jednotky">cm</string>
    <string name="progile_age">Vek</string>
    <string name="progile_pohlavie_text">Pohlavie</string>
    <string name="profile_button_save">Uložiť</string>
    <string name="profile_button_logOut">Odhlásiť</string>
    <string name="profile_bmi">BMI</string>

        <!-- Pohlavie -->
    <string name="profile_radio_male">Muž</string>>
    <string name="profile_radio_female">Žena</string>

    <!-- Dialog choose type of activity -->
    <string name="choose_activity_hint_typ">Zadajte vykonanú aktivitu</string>
    <string name="answerSave">Uloziť aktivitu</string>
</resources>